--- a/norst.co.zw/index.html
+++ b/norst.co.zw/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <div class="center">
-            <p>Under Construction</p>
+            <p><h3>Under Construction</h3></p>
         </div>
     </div>
 </body>
